@@ -9,6 +9,7 @@
   * add --no-remove option to conda index
   * various fixes for --python, --numpy, --perl, and --R
   * various cleanups for the command documentation
+  * fix conda skeleton for packages having `setup_requires` in `setup.py`
 
 2015-05-19   1.13.0:
 --------------------
